[gd_scene load_steps=10 format=3 uid="uid://cigeo7r4nkbh5"]

[ext_resource type="Texture2D" uid="uid://b2vhf06lgt6f7" path="res://texture/ui/streaming_arena.png" id="1_s1sc2"]
[ext_resource type="Texture2D" uid="uid://v4d6r2h7i3cs" path="res://texture/ui/underbar1.png" id="2_5tisw"]
[ext_resource type="Script" path="res://scripts/ui/counter.gd" id="3_hnaac"]
[ext_resource type="Texture2D" uid="uid://88gia1e16y5d" path="res://texture/ui/star.png" id="3_rgr3i"]
[ext_resource type="Script" path="res://scripts/ui/opening_relic.gd" id="4_irvj6"]
[ext_resource type="Texture2D" uid="uid://ckqigj1dcvdn3" path="res://texture/ui/underbar2.png" id="4_x3a5y"]
[ext_resource type="Texture2D" uid="uid://qs72naw64p51" path="res://texture/prefabs/civilight_eterna.png" id="5_jaymb"]
[ext_resource type="Script" path="res://scripts/ui/under_bar_2.gd" id="5_l2kkk"]
[ext_resource type="Script" path="res://scripts/ui/left_id_bar.gd" id="6_6fyvv"]

[node name="StreamingArena" type="Node2D"]

[node name="GamelayFrame" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_s1sc2")
metadata/_edit_use_anchors_ = true

[node name="UnderBar" type="Node2D" parent="."]
position = Vector2(960, 540)

[node name="UnderBar1" type="TextureRect" parent="UnderBar"]
offset_left = -765.0
offset_top = 456.0
offset_right = 88.0
offset_bottom = 521.0
texture = ExtResource("2_5tisw")

[node name="Counter" type="Node2D" parent="UnderBar/UnderBar1"]
script = ExtResource("3_hnaac")

[node name="star3" type="TextureRect" parent="UnderBar/UnderBar1/Counter"]
offset_left = 157.0
offset_top = 14.0
offset_right = 169.0
offset_bottom = 26.0
texture = ExtResource("3_rgr3i")

[node name="star2" type="TextureRect" parent="UnderBar/UnderBar1/Counter"]
offset_left = 157.0
offset_top = 27.0
offset_right = 169.0
offset_bottom = 39.0
texture = ExtResource("3_rgr3i")

[node name="star1" type="TextureRect" parent="UnderBar/UnderBar1/Counter"]
offset_left = 157.0
offset_top = 39.0
offset_right = 169.0
offset_bottom = 51.0
texture = ExtResource("3_rgr3i")

[node name="TimeDisplay" type="Label" parent="UnderBar/UnderBar1/Counter"]
offset_left = 174.0
offset_top = 4.0
offset_right = 377.0
offset_bottom = 59.0
theme_override_colors/font_color = Color(0.109075, 0.109075, 0.109075, 1)
theme_override_colors/font_shadow_color = Color(0.280664, 0.280664, 0.280664, 1)
theme_override_font_sizes/font_size = 40
text = "3:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpeningRelic" type="Label" parent="UnderBar/UnderBar1"]
layout_mode = 0
offset_left = 389.0
offset_top = 5.0
offset_right = 834.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 30
text = "藏品："
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_irvj6")

[node name="Timer" type="Timer" parent="UnderBar"]
editor_description = "三次三分钟计时器"

[node name="UnderBar2" type="TextureRect" parent="UnderBar"]
offset_left = 90.0
offset_top = 455.0
offset_right = 943.0
offset_bottom = 520.0
texture = ExtResource("4_x3a5y")
script = ExtResource("5_l2kkk")

[node name="AnnouncersList" type="Label" parent="UnderBar/UnderBar2"]
layout_mode = 0
offset_left = 174.0
offset_top = 7.0
offset_right = 835.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0.0830204, 0.0830204, 0.0830204, 1)
theme_override_colors/font_shadow_color = Color(0.344076, 0.344076, 0.344076, 1)
theme_override_font_sizes/font_size = 34
vertical_alignment = 1

[node name="CivilightEterna" type="TextureRect" parent="UnderBar/UnderBar2"]
layout_mode = 0
offset_left = 711.0
offset_top = -114.0
offset_right = 941.0
offset_bottom = 116.0
texture = ExtResource("5_jaymb")

[node name="LeftIDBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
script = ExtResource("6_6fyvv")

[node name="Player" type="Node2D" parent="LeftIDBar"]
position = Vector2(-864, -420)

[node name="PlayerIcon" type="TextureRect" parent="LeftIDBar/Player"]
offset_left = -54.0
offset_top = -65.0
offset_right = 61.0
offset_bottom = 50.0
expand_mode = 3

[node name="PlayerName" type="Label" parent="LeftIDBar/Player"]
offset_left = -56.0
offset_top = 52.0
offset_right = 64.0
offset_bottom = 75.0
text = "选手名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Team" type="Node2D" parent="LeftIDBar"]
position = Vector2(-864, -204)

[node name="TeamIcon" type="TextureRect" parent="LeftIDBar/Team"]
offset_left = -57.0
offset_top = -70.0
offset_right = 58.0
offset_bottom = 45.0
expand_mode = 3

[node name="TeamID" type="Label" parent="LeftIDBar/Team"]
offset_left = -59.0
offset_top = 47.0
offset_right = 61.0
offset_bottom = 70.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpeningOperator" type="Node2D" parent="LeftIDBar"]
position = Vector2(-864, -28)

[node name="OperatorIcon" type="TextureRect" parent="LeftIDBar/OpeningOperator"]
offset_left = -56.0
offset_top = -65.0
offset_right = 57.0
offset_bottom = 48.0
expand_mode = 3

[node name="OperatorName" type="Label" parent="LeftIDBar/OpeningOperator"]
offset_left = -59.0
offset_top = 51.0
offset_right = 61.0
offset_bottom = 74.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpeningSquad" type="Node2D" parent="LeftIDBar"]
position = Vector2(-864, 140)

[node name="SquadIcon" type="TextureRect" parent="LeftIDBar/OpeningSquad"]
offset_left = -50.0
offset_top = -53.0
offset_right = 51.0
offset_bottom = 48.0
expand_mode = 3

[node name="SquadName" type="Label" parent="LeftIDBar/OpeningSquad"]
offset_left = -58.0
offset_top = 58.0
offset_right = 61.0
offset_bottom = 81.0
horizontal_alignment = 1
vertical_alignment = 1
